fix(order-process): adjust phone alignment to the right on tablet view

--- a/src/styles/sections/order-process.scss
+++ b/src/styles/sections/order-process.scss
@@ -99,10 +99,10 @@
 		}
 	}
 
-	// TODO: не забыть номер прижать к правому краю на планшете
 	&__phone {
 		display: flex;
 		align-items: center;
+		justify-content: end;
 		gap: 16px;
 	}
 
